fix(css): prevent horizontal overflow by changing max-width

--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 * {
   box-sizing: border-box;
-  max-width: 100vw;
+  max-width: 100%;
 }
 body {
   display: grid;
   grid-template-columns: 15% auto 15%;
-  margin: 0%;
+  margin: 0;
   overflow-x: hidden;
 }
 .principal-container {
